objects/Stage_solution__c.object
<CustomObject>
    <fields>
        <fullName>Crowd_Capacity__c</fullName>
        <description>How many people can comfortably fit at this stage.</description>
        <label>Crowd Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival_solution__c</referenceTo>
        <relationshipLabel>Stages (solutions)</relationshipLabel>
        <relationshipName>Stages_solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Main_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked if this is the main stage.</description>
        <label>Main Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked if the stage requires a piano for their bands.</description>
        <label>Needs Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Installs__c</fullName>
        <description>Any special installation requests for this particular stage</description>
        <label>Special Installs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lasers</fullName>
                </value>
                <value>
                    <fullName>Smoke Machines</fullName>
                </value>
                <value>
                    <fullName>Pyrotechnics</fullName>
                </value>
                <value>
                    <fullName>Art Installation</fullName>
                </value>
                <value>
                    <fullName>Extra Subwoofers</fullName>
                </value>
                <value>
                    <fullName>Multiple Drumsets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Runs and handles all things related to the stage.</description>
        <label>Stage Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Stages (solutions)</relationshipLabel>
        <relationshipName>Stages_solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stage (solution)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>